[gd_scene load_steps=4 format=3 uid="uid://csqm665n8ygu7"]

[ext_resource type="Script" uid="uid://dcvpldvihnyww" path="res://scenes/UI/VolumeControl.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b7cdyuwvvd86v" path="res://assets/ui/Modern_UI_Style_2_32x32.png" id="2_fm4xk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0p3nk"]
atlas = ExtResource("2_fm4xk")
region = Rect2(959, 291, 32, 32)

[node name="VolumeControl" type="Control"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -359.0
offset_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -180.0
grow_horizontal = 0
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="VolumeSlider" type="VSlider" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 10
max_value = 1.0
step = 0.05
value = 0.3

[node name="SpeakerButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 10
icon = SubResource("AtlasTexture_0p3nk")
flat = true
alignment = 2
icon_alignment = 1
